Fixed alignment

--- a/OnLand/ControlLaptop/angular-UI/src/app/components/logo-bar/logo-bar.component.css
+++ b/OnLand/ControlLaptop/angular-UI/src/app/components/logo-bar/logo-bar.component.css
@@ -2,3 +2,49 @@
     width: 100%;
     height: 40px;
 }
+
+#paradigm{
+    position: absolute;
+left: 6.02%;
+right: 81.84%;
+top: 1.94%;
+bottom: 95.42%;
+/* NAVIGATION */
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 28px;
+text-align: center;
+
+color: #C8C8C8;
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+#boring{
+    /* NAVIGATION */
+
+position: absolute;
+left: 13.8%;
+right: 82.06%;
+top: 5%;
+bottom: 93.19%;
+
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 14px;
+text-align: left;
+
+color: #C8C8C8;
+
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#logo{
+    position: absolute;
+    left: 3%;
+    width: 51px;
+    height: 45px;
+}
+
